--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment No. 1</title>
+    <title>Assignment No. 3</title>
     <style>                                 /* This is internal CSS */
      h2{                                    /* this is tag selector */
         text-align: center;
@@ -18,7 +18,7 @@
         color: green;
      }
     </style>
-    <link rel="stylesheet" href="assignment 1.css">         <!--This link is for external CSS-->
+    <link rel="stylesheet" href="./assignment 3.css">         <!--This link is for external CSS-->
     <body>
         <h1 style="text-align: center; background-color:black  ; color: white;"> <!-- this is inline css -->
             Welcome to the CSS Basic Assignment 01 - WMA B08
